--- a/agency/blog-list.html
+++ b/agency/blog-list.html
@@ -120,14 +120,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Vivamus ac vehicula dui</a>
+                  <a href="#"
+                    >Bahasa Pemrograman Untuk Mengawali Anak Masuk
+                    DuniaPemrograman</a
+                  >
                 </h3>
                 <div class="text">
                   Cras aliquet ligula dui, vitae fermentum velit tincidunt id.
                   Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam
                   egestas augue.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-1.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -138,14 +141,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Phasellus convallis augue</a>
+                  <a href="#"
+                    >Bahasa Pemrograman Untuk Mengawali Anak Masuk
+                    DuniaPemrograman</a
+                  >
                 </h3>
                 <div class="text">
                   Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac.
                   Vestibulum finibus urna ut velit venenatis, vel ultrices
                   sapien mattis.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-1.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -156,14 +162,16 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Masa Depan Kecerdasan Buatan (AI) dan Pendidikan STEAM</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-2.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -174,14 +182,16 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Masa Depan Kecerdasan Buatan (AI) dan Pendidikan STEAM</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-2.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -192,14 +202,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Transformasi Pendidikan STEM melalui Teknologi: Membuka
+                    Pintu Ke Masa Depan yang Cerah</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-3.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -210,14 +223,17 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#"
+                    >Transformasi Pendidikan STEM melalui Teknologi: Membuka
+                    Pintu Ke Masa Depan yang Cerah</a
+                  >
                 </h3>
                 <div class="text">
                   Maecenas eu erat vitae dui convallis consequat vel gravida
                   nulla. Vestibulum finibus euismod odio, ut tempus enim varius
                   eu.
                 </div>
-                <a href="blog-details.html" class="main-button">Read More</a>
+                <a href="blog-details-3.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
